[CCT-176]fix(grid): Add wrap to row (#459)

--- a/src/theme/grid/grid.scss
+++ b/src/theme/grid/grid.scss
@@ -148,6 +148,7 @@
       flex-direction: row;
       margin: 0 -#{$egeo-grid---half-gutter-width};
       max-width: calc(100% + #{$egeo-grid---gutter-width});
+      flex-wrap: wrap;
    }
 
    .row.reverse {
